docs(usuario): documentado endpoint de registro y perfil con Swagger - Anotaciones en UsuarioDTO y UsuarioResponseDTO - Descripciones y respuestas esperadas en UsuarioController.